# ComputacaoGrafica

./: .gitignore
Codigo_01/01_CodeBlocks/Aula_pratica_01/: main.cpp
Codigo_01/01_CodeBlocks/Aula_pratica_01/Images/: example.pgm  indio_256x256.pgm  indio_64x64.pgm  lena_256x256.pgm  lena_64x64.pgm  lena_condec.ppm  rhino.ppm
Codigo_02/02_CodeBlocks/02_tracado_de_raios/: 01_EsferaBranca.ppm  02_Lambertiniano.ppm  03_Phong.ppm  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image.ppm  raytracer
Codigo_02/02_CodeBlocks/02_tracado_de_raios/include/: Color.h  Image.h  Object.h  Point_3.h  Ray_3.h  Sphere_3.h  Vector_3.h  euclidean_constructions_3.h  number_utils.h
Codigo_02/02_CodeBlocks/02_tracado_de_raios/src/: Color.cpp  Image.cpp  Point_3.cpp  Ray_3.cpp  Sphere_3.cpp  Vector_3.cpp  euclidean_constructions_3.cpp  raytracer.cpp
glview/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  glview
glview-orbit/: CMakeCache.txt  Makefile  cmake_install.cmake  glview
glview-orbit/.ipynb_checkpoints/: 04-newton-slides-checkpoint.ipynb
glview-orbit/Data/: terrain-map-edit.mtl  untitled.mtl
glview-orbit/Includes/: Model.h  Projection.h  Scene.h  TrackBall.h
glview-orbit/Sources/: main.cpp
glview-orbit/Sources/shaders/: fragment.glsl
glview/Sources/: main.cpp
glview/Sources/shaders/: frag.shader  vert.shader
